# CMAKE-PRACTICE

./: README.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt  COPYRIGHT  README  runHello.sh
t2/install/share/doc/cmake/t2/: hello.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t3/src/: CMakeLists.txt  main.cpp
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
t5/: CMakeLists.txt
t5/cmake/: FindHELLO.cmake
t5/cmake/lib/: libhello.so.1.2
t5/src/: CMakeLists.txt
